#pragma once
#include "CellState.h"

class AliveState : public CellState {
public:
    AliveState();
};
