#pragma once
#include "CellState.h"

class DeadState : public CellState {
public:
    DeadState();
};
