#pragma once

class Rule {
public:
    bool conwayRule(bool currentState, int neighbors);
};
