classDiagram
   
    %% Ajouter l'extension Mermaid Chart 
    %% Crtl+Shift+P -> "Mermaid Chart Preview Diagram"
    
    class CellState {
        <<abstract>>
        #alive: bool
        +CellState(bool)
        +isAlive() bool
        +~CellState()
    }
    
    class AliveState {
        +AliveState()
    }
    
    class DeadState {
        +DeadState()
    }

    class Cell {
        -state: CellState*
        -nextState: CellState*
        +Cell()
        +~Cell()
        +isAlive() bool
        +setState(CellState*) void
        +prepareNext(CellState*) void
        +update() void
    }
    
    class Grid {
        -cells: vector~vector~Cell~~
        -rows: int
        -cols: int
        +Grid(int rows, int cols)
        +loadFromFile(string filename) void
        +getCell(int row, int col) Cell&
        +countNeighbors(int row, int col) int
        +getRows() int
        +getCols() int
    }
    
    class Rule {
        +conwayRule(bool currentState, int neighbors) bool
    }
    
    class Game {
        -grid: Grid
        -rule: Rule*
        -iteration: int
        -initialFilename: string
        +Game(string filename, Rule* rule)
        +~Game()
        +step() void
        +reset() void
        +runConsoleToFiles(int steps, string outputFolder) void
        +getGrid() Grid&
        +getIteration() int
        -saveGridToFile(string filename) void
    }
    
    class GameGraphics {
        -game: Game&
        -window: RenderWindow
        -cellSize: float
        -font: Font
        -isPaused: bool
        -autoPlay: bool
        -delayBetweenSteps: float
        -clock: Clock
        +GameGraphics(Game& game, int width, int height)
        +~GameGraphics()
        +run() void
        +setSpeed(float seconds) void
        +togglePause() void
        -handleEvents() void
        -update() void
        -draw() void
        -drawGrid() void
        -drawUI() void
    }
    
    CellState <|-- AliveState
    CellState <|-- DeadState
    Cell --> CellState
    Grid *-- Cell
    Game *-- Grid 
    Game --> Rule
    GameGraphics --> Game